force-app/main/default/objects/personal_info__c/personal_info__c.object-meta.xml
<CustomObject>
    <label>personal_info</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>personal_info_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>personal_infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>