force-app/main/default/objects/personal_info__c/fields/bio__c.field-meta.xml
<CustomField>
    <fullName>bio__c</fullName>
    <label>bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>