force-app/main/default/objects/personal_info__c/fields/birthday__c.field-meta.xml
<CustomField>
    <fullName>birthday__c</fullName>
    <label>birthday</label>
    <type>Date</type>
</CustomField>