force-app/main/default/objects/personal_info__c/fields/first_name__c.field-meta.xml
<CustomField>
    <fullName>first_name__c</fullName>
    <label>first_name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>