force-app/main/default/objects/personal_info__c/fields/last_name__c.field-meta.xml
<CustomField>
    <fullName>last_name__c</fullName>
    <label>last_name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>