force-app/main/default/objects/personal_info__c/fields/links__c.field-meta.xml
<CustomField>
    <fullName>links__c</fullName>
    <label>links</label>
    <type>Url</type>
</CustomField>