force-app/main/default/objects/personal_info__c/fields/phone_number__c.field-meta.xml
<CustomField>
    <fullName>phone_number__c</fullName>
    <label>phone_number</label>
    <type>Phone</type>
</CustomField>